Implement Label entity with full CRUD operations